--- a/css/main.css
+++ b/css/main.css
@@ -339,6 +339,30 @@ body {
   justify-content: center;
   padding: 2rem; }
 
+.gray-box--border-right {
+  background-color: var(--gray-clr);
+  margin-bottom: 3rem;
+  width: 100%;
+  border-top-left-radius: var(--box-radius);
+  border-bottom-left-radius: var(--box-radius);
+  border-right: 0.5rem solid var(--secondary-clr);
+  padding: 1rem; }
+.gray-box--border-left {
+  background-color: var(--gray-clr);
+  margin-bottom: 3rem;
+  width: 100%;
+  border-top-right-radius: var(--box-radius);
+  border-bottom-right-radius: var(--box-radius);
+  border-left: 0.5rem solid var(--secondary-clr);
+  padding: 1rem; }
+
+.aboutme-title {
+  color: var(--secondary-clr);
+  font-size: 3rem;
+  margin: 1rem 0 1rem 0;
+  text-align: center;
+  text-transform: uppercase; }
+
 .date {
   font-size: 1.6rem;
   font-weight: normal;
@@ -362,6 +386,13 @@ body {
     margin: 0 0 1rem 0;
     text-align: center;
     text-transform: uppercase; }
+
+.description2 {
+  font-size: 1.6rem;
+  font-weight: normal;
+  line-height: 2rem;
+  margin-bottom: 0;
+  text-align: center; }
 
 .header {
   align-items: center;
@@ -536,28 +567,6 @@ body {
 .education {
   background-color: var(--background-clr);
   width: 100%; }
-  .education__title {
-    color: var(--secondary-clr);
-    font-size: 3rem;
-    margin: 5rem 0 1rem 0;
-    text-align: center;
-    text-transform: uppercase; }
-  .education .gray-box--border-right {
-    background-color: var(--gray-clr);
-    margin-bottom: 3rem;
-    width: 100%;
-    border-top-left-radius: var(--box-radius);
-    border-bottom-left-radius: var(--box-radius);
-    border-right: 0.5rem solid var(--secondary-clr);
-    padding: 1rem; }
-  .education .gray-box--border-left {
-    background-color: var(--gray-clr);
-    margin-bottom: 3rem;
-    width: 100%;
-    border-top-right-radius: var(--box-radius);
-    border-bottom-right-radius: var(--box-radius);
-    border-left: 0.5rem solid var(--secondary-clr);
-    padding: 1rem; }
 
 .hamburger-menu {
   cursor: pointer;
