--- a/scss/base/_global-selectors.scss
+++ b/scss/base/_global-selectors.scss
@@ -1,3 +1,29 @@
+.gray-box {
+	&--border-right {
+		@include grayBox(100%, 3rem);
+		border-top-left-radius: var(--box-radius);
+		border-bottom-left-radius: var(--box-radius);
+		border-right: 0.5rem solid var(--secondary-clr);
+		padding: 1rem;
+	}
+
+	&--border-left {
+		@include grayBox(100%, 3rem);
+		border-top-right-radius: var(--box-radius);
+		border-bottom-right-radius: var(--box-radius);
+		border-left: 0.5rem solid var(--secondary-clr);
+		padding: 1rem;
+	}
+}
+
+.aboutme-title {
+	color: var(--secondary-clr);
+	font-size: 3rem;
+	margin: 1rem 0 1rem 0;
+	text-align: center;
+	text-transform: uppercase;
+}
+
 .date {
 	@include date(1.6rem);
 }
@@ -16,4 +42,12 @@
 	&--green {
 		@include description--green(1.6rem);
 	}
+}
+
+.description2 {
+	font-size: 1.6rem;
+	font-weight: normal;
+	line-height: 2rem;
+	margin-bottom: 0;
+	text-align: center;
 }
