--- a/css/main.css
+++ b/css/main.css
@@ -501,6 +501,7 @@ body {
 
 .header-aboutme-portfolio {
   align-items: center;
+  background-color: var(--background-clr);
   display: flex;
   flex-direction: column;
   height: 100vh;
