--- a/css/main.css
+++ b/css/main.css
@@ -433,6 +433,7 @@ body {
     height: 1.5rem;
     position: absolute;
     top: -0.75rem;
+    transition: transform 1s linear;
     width: 1.5rem; }
 
 .udemy-title {
